# Fyla

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: release-preflight.mjs  verify-release-assets.sh
src/: app.jsx  main.jsx  style.css
src-tauri/: Cargo.toml  Fyla.entitlements  Info.plist  build.rs  tauri.conf.json
src-tauri/binaries/: README.md  pdftotext-aarch64-apple-darwin  pdftotext-universal-apple-darwin  pdftotext-x86_64-apple-darwin
src-tauri/capabilities/: default.json  paper-chat.json
src-tauri/icons/: icon.icns
src-tauri/native/: autostart_bridge.m  ocr_bridge.m  service_bridge.m
src-tauri/src/: autostart.rs  config.rs  embedding.rs  lib.rs  llm.rs  main.rs  ocr.rs  paper.rs  paper_chat.rs  pdf.rs  renamer.rs  scanner.rs  service.rs  streaming.rs  test_ocr.rs  watcher.rs
src/components/: Icon.jsx  PaperChatDock.jsx  PaperHistoryItem.jsx  PaperPdfViewer.jsx  PaperRowActionsMenu.jsx  PaperTaskItem.jsx  SelectionAskBubble.jsx  TaskItem.jsx  WelcomeGuide.jsx  file-item.jsx
src/i18n/: en.json  zh.json
src/lib/: changelog.js  i18n.js  paper-review-prompt-template.txt  paperChars.js  paperChat.js  paperQueue.js  renderMarkdown.js  shortcuts.js  store.js  taskQueue.js  tauri.js  textSearch.js  updater.js  validator.js  windowMode.js
src/pages/: files.jsx  history.jsx  paper-chat-window.jsx  paper-detail.jsx  papers.jsx  settings.jsx
